--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@animotion/core": "^1.0.23",
     "@dimforge/rapier3d-compat": "^0.14.0",
+    "@sveltejs/adapter-static": "^3.0.6",
     "@theatre/core": "^0.7.2",
     "@theatre/studio": "^0.7.2",
     "@threlte/core": "next",
