--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "install": "^0.13.0",
     "postprocessing": "^6.36.3",
     "three": "^0.169.0",
-    "three-mesh-bvh": "^0.8.2"
+    "three-mesh-bvh": "^0.8.2",
+    "vite-dev-rpc": "^0.1.4"
   }
 }
